environments/production/monitoring/prometheus/server-service.yaml
##---
# Source: prometheus/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    chart: prometheus-5.4.3
    component: "server"
    heritage: Tiller
    release: prod
  name: prod-prometheus-server
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
    component: "server"
    release: prod
  type: "ClusterIP"
