environments/production/monitoring/prometheus/server-ingress.yaml
##---
# Source: prometheus/templates/server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: prometheus
    chart: prometheus-5.4.3
    component: "server"
    heritage: Tiller
    release: prod
  name: prod-prometheus-server
  namespace: monitoring
spec:
  rules:
    - host: prometheus.tools.prod
      http:
        paths:
          - path: /
            backend:
              serviceName: prod-prometheus-server
              servicePort: 80
